addressing PR comments

--- a/app/views/site/_author_fields.html.erb
+++ b/app/views/site/_author_fields.html.erb
@@ -1,21 +1,17 @@
 <div class="form-group row">
-  <div class="col-sm-2">
+  <div class="col-sm-3">
     <%= f.label :first_name, class: 'sr-only' %>
     <%= f.text_field :first_name, class: 'form-control', placeholder: 'First name' %>
   </div>
-  <div class="col-sm-2">
+  <div class="col-sm-3">
     <%= f.label :last_name, class: 'sr-only' %>
     <%= f.text_field :last_name, class: 'form-control', placeholder: 'Last name' %>
   </div>
-  <div class="col-sm-2">
+  <div class="col-sm-3">
     <%= f.label :email, class: 'sr-only' %>
     <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
   </div>
-  <div class="col-sm-4">
-    <%= f.label :institution, class: 'sr-only' %>
-    <%= f.text_field :institution, class: 'form-control', placeholder: 'Institution' %>
-  </div>
-  <div class="col-sm-1">
+  <div class="col-sm-2">
     <div class="checkbox">
       <label><%= f.check_box :corresponding %> Allow&nbsp;email?</label>
     </div>
@@ -26,5 +22,15 @@
                            confirm: 'Are you sure?  This cannot be undone unless you reload the page before saving.'
                          }
     %>
+  </div>
+</div>
+<div class="form-group row">
+  <div class="col-sm-6">
+    <%= f.label :institution, class: 'sr-only' %>
+    <%= f.text_field :institution, class: 'form-control', placeholder: 'Institution' %>
+  </div>
+  <div class="col-sm-6">
+    <%= f.label :orcid, class: 'sr-only' %>
+    <%= f.text_field :orcid, class: 'form-control', placeholder: 'ORCID' %>
   </div>
 </div>
