--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -16,7 +16,7 @@
           <a href="#settings-general" data-toggle="tab">General</a>
         </li>
         <li role="presentation" class="settings-nav" id="settings-viz-nav">
-          <a href="#settings-viz" data-toggle="tab">View Options</a>
+          <a href="#settings-viz" data-toggle="tab">View options</a>
         </li>
         <li role="presentation" class="settings-nav" id="settings-sharing-nav">
           <a href="#settings-sharing" data-toggle="tab">Sharing/Access</a>
@@ -25,7 +25,7 @@
           <a href="#settings-authors" data-toggle="tab">Authors/Publications</a>
         </li>
         <li role="presentation" class="settings-nav" id="settings-resources-nav">
-          <a href="#settings-resources" data-toggle="tab">External Resources</a>
+          <a href="#settings-resources" data-toggle="tab">External resources</a>
         </li>
       </ul>
     </div>
