--- a/app/views/site/_study_settings_general.html.erb
+++ b/app/views/site/_study_settings_general.html.erb
@@ -1,4 +1,4 @@
-<h3>General Settings</h3>
+<h3>General settings</h3>
 <p class="help-block">
   Edit general study properties, such as public visibility and data release dates.
 </p>
