--- a/app/views/site/_study_settings_resources.html.erb
+++ b/app/views/site/_study_settings_resources.html.erb
@@ -1,4 +1,4 @@
-<h3>External Resources</h3>
+<h3>External resources</h3>
 <p class="help-block">
   Add links to external resources for this study, such as code or data repositories, informational wikis, or other
   studies in Single Cell Portal.
