--- a/app/views/site/_study_settings_sharing.html.erb
+++ b/app/views/site/_study_settings_sharing.html.erb
@@ -29,7 +29,7 @@
   <%= f.link_to_add "<span class='fas fa-plus'></span> Share study".html_safe, :study_shares, class: 'btn btn-primary', id: 'add-study-share' %>
 </div>
 <div class="form-group">
-  <h3>Reviewer Access</h3>
+  <h3>Reviewer access</h3>
   <p class="help-block">
     Set up anonymous "reviewer" access for allowing publication reviewers to view your study while it
     is still private.  Reviewers can interact with any enabled visualizations, but cannot download data or view the
