--- a/app/views/site/_study_description_view.html.erb
+++ b/app/views/site/_study_description_view.html.erb
@@ -4,7 +4,7 @@
       <%= @study.full_description.html_safe %>
     </div>
   </div>
-  <% if @study.has_linked_resources? || @study.authors.corresponding.any? %>
+  <% if @study.has_sidebar_content? %>
     <%= render partial: 'study_resources_sidebar' %>
   <% end %>
 </div>
