Revert "moving study overview to Terra style guide"
This reverts commit 603ad0e0860adbdae63cae73fde0fdb4467802ab.

--- a/app/views/site/_study_description_view.html.erb
+++ b/app/views/site/_study_description_view.html.erb
@@ -1,5 +1,5 @@
 <div class="row" id="study-description-row">
-  <div class="<%=  @study.has_sidebar_content? ? 'col-md-9' : 'col-md-12' %>">
+  <div class="col-md-12">
     <div id="study-description-content" class="ck-content">
       <%= @study.full_description.html_safe %>
     </div>
