--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -20,7 +20,7 @@
       #%>
       <div id="home-page-content"></div>
       <script  type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
-        window.addEventListener('load', () => window.SCP.renderHomePageContent(document.getElementById('home-page-content')))
+        window.addEventListener('load', () => window.SCP.renderComponent('home-page-content', 'HomePageContent'))
       </script>
     </div>
   </div>
