--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -100,6 +100,12 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', async function(
         }
     }
 
+    $(`#sync-study-file-${fileId}`)
+      .prop('disabled', null)
+      .attr('data-toggle', null)
+      .attr('data-original-title', null)
+      .attr('data-placement', null)
+
     // FileUploadControl updates this more elegantly via React,
     // but this direct approach is easier and as effective here.
     let useConvention = false
@@ -128,7 +134,6 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', async function(
     window.SCP.renderValidationMessage(
       target, studyAccession, errorMsgs, warningMsgs, fileName, true
     )
-
 
     if (issues.errors.length > 1) {
       // Disable the "Sync" button
