--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -114,19 +114,17 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', async function(
     }
 
     const bucketName = '<%= @study.bucket_id %>'
-    const issues = await window.SCP.validateRemoteFileContent(
+    const messages = await window.SCP.validateRemoteFile(
       bucketName, fileName, fileType, fileOptions
     );
 
     $(form).remove('.validation-message-container')
     $(form).append('<div class="validation-message-container">')
     const studyAccession = '<%= @study.accession %>'
-    const errorMsgs = issues.errors.map(error => error[2])
-    const warningMsgs = issues.warnings.map(warning => warning[2])
     const selector = `#${form.attr('id')} .validation-message-container`
     const target = document.querySelector(selector)
     window.SCP.renderValidationMessage(
-      target, studyAccession, errorMsgs, warningMsgs, fileName, true
+      target, studyAccession, messages, fileName, true
     )
 
 
