updating study sidebar and settings UX

--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -3,6 +3,9 @@
   <%= link_to "Toggle all panels <i class='fas fa-toggle-on'></i>".html_safe, '#/', class: 'btn btn-default btn-sm pull-right', id: 'toggle-panels' %>
 </h1>
 <p class="lead">Accession: <span id="study-accession"><%= @study.accession %></span></p>
+<p>
+  <label>Created:</label> <%= @study.created_at.to_formatted_s(:long) %><br/>
+  <label>Creator:</label> <%= @study.user.email %>
 </p>
 <% if @study.embargo_active? %>
   <p class="lead text-danger">Data release date: <%= @study.embargo.to_s(:long) %></p>
