--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -813,36 +813,31 @@ figcaption.ck-editor__editable {
   display: flex;
 }
 
-#study-sidebar-content {
-  background-color: #cddff6;
-  position: relative;
-  right: 0;
-  margin-left: 0;
-  border-left: 3px solid $action-color;
-  min-width: 350px;
-  max-width: 350px;
-  max-height: 600px;
-  overflow-y: auto;
-  padding: 10px 15px;
-  transition: all 0.3s;
+#study-sidebar-container {
+  border-left: 1px solid #ccc;
+  flex-basis: 25%;
+  flex-shrink: 0;
+  &.closed {
+    flex-shrink: 2;
+    #study-sidebar-content {
+      display: none;
+    }
+  }
 }
 
-#study-sidebar-content.closed {
-  right: -350px;
-  margin-left: -350px;
-  overflow-y: inherit;
+#study-sidebar-content {
+  margin-right: 1em;
+  padding: 0.5em 1em 2em 2em;
+  h5 {
+    margin-bottom: 0.5em;
+  }
+  h5:not(:first-of-type) {
+    margin-top: 1em;
+  }
 }
 
 #toggle-study-resources {
-  position: relative;
-  top: 0;
-  left: 0;
-  transition: all 0.3s;
-}
-
-#toggle-study-resources.closed {
-  top: -40px;
-  left: -60px;
+  margin-left: 1em;
 }
 
 .publication-link {
@@ -853,4 +848,16 @@ figcaption.ck-editor__editable {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.list-style-none {
+  list-style: none;
+  padding-inline-start: 0px;
+  li {
+    margin: 1em
+  }
+}
+
+.underline {
+  text-decoration: underline;
 }
