Apply suggestions from code review
Co-authored-by: Eric Weitz <eweitz@broadinstitute.org>

--- a/app/views/site/_study_description_view.html.erb
+++ b/app/views/site/_study_description_view.html.erb
@@ -6,7 +6,7 @@
   </div>
   <% if @study.has_sidebar_content? %>
     <div id="study-sidebar-container">
-      <button id="toggle-study-resources" class="terra-tertiary-btn" title="toggle display of sidebar"><span class="fas fa-lg fa-angle-right"></span></button>
+      <button id="toggle-study-resources" class="terra-tertiary-btn" title="Toggle display of sidebar"><span class="fas fa-lg fa-angle-right"></span></button>
       <%= render partial: 'study_resources_sidebar' %>
     </div>
   <% end %>
