--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -29,7 +29,7 @@
         </li>
       </ul>
       <br/>
-      <h5>Management Pages</h5>
+      <h5>Management pages</h5>
       <ul class="list-style-none">
         <li role="presentation">
           <%= scp_link_to "Upload/Edit data", initialize_study_path(@study), class: "#{@study.url_safe_name}-upload" %>
