--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -117,7 +117,8 @@
 
           // Get a time-based one time authentication token (totat),
           // then show the download command
-          window.SCP.API.fetchAuthCode().then(
+          const fileIds = <%= @study.study_files.pluck(:_id).map(&:to_s).to_s.html_safe %>
+          window.SCP.API.fetchAuthCode(fileIds, []).then(
             function (response) {
               var authCode = response.authCode;
               var timeInterval = response.timeInterval; // token expires after this many seconds
