resetting plot order on mouse leave legend

--- a/app/javascript/styles/_scatterPlot.scss
+++ b/app/javascript/styles/_scatterPlot.scss
@@ -48,11 +48,7 @@
 
 /** Like hover state for React Select */
 .scatter-legend-row:hover {
-  border-color: #AAB;
-}
-
-.scatter-legend-row:hover {
-  border-color: #AAB;
+  border-color: $action-color;
 }
 
 .scatter-legend-icon {
