initial version of Usage Stats page with Mixpanel integration

--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -38,7 +38,10 @@
           <%= scp_link_to "Sync workspace", sync_study_path(@study), class: "#{@study.url_safe_name}-sync sync-button" %>
         </li>
         <li>
-          <%= scp_link_to "Study details", study_path(@study), class: " #{@study.url_safe_name}-sync sync-button" %>
+          <%= scp_link_to "Study details", study_path(@study), class: " #{@study.url_safe_name}-sync details-button" %>
+        </li>
+        <li>
+          <%= scp_link_to "Usage stats", usage_stats_study_path(@study), class: " #{@study.url_safe_name}-usage_stats usage-button" %>
         </li>
       </ul>
     </div>
