--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -104,6 +104,9 @@
       border-top-right-radius: 10px;
       border-right: none;
     }
+    td {
+      border: none;
+    }
   }
   tbody {
     label {
@@ -111,7 +114,13 @@
     }
   }
   td {
-    border: 1px solid #eee;
+    border-top: 1px solid #eee;
+    padding: 0.75em;
+  }
+  &.compressed {
+    td {
+      padding: 0.1em 0.5em;
+    }
   }
 }
 
