--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,3 +1,8 @@
+<div id="my-studies-content"></div>
+<script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
+  window.SCP.renderComponent('my-studies-content', 'MyStudiesPage')
+</script>
+<!--
 <h1>My studies</h1>
 <div class="row">
 	<div class="col-md-12">
@@ -113,3 +118,4 @@
     });
 
 </script>
+-->
