Enable DE file fetch from Google bucket

--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -6,6 +6,9 @@
       window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
     }
   <% end %>
+
+  // TODO: Feature-flag this for DE, refine before making GA
+  window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
 </script>
 
 
