--- a/app/javascript/styles/_uploadWizard.scss
+++ b/app/javascript/styles/_uploadWizard.scss
@@ -48,8 +48,9 @@
     }
   }
   .step-number {
-    min-width: 25px;
+    min-width: 23px;
     margin-right: 1em;
+    max-width: 23px;
   }
   li.active {
     background: rgb(202, 212, 224);
@@ -153,4 +154,12 @@
 
 .left-margin {
   margin-left: 15px;
+}
+
+
+.list-link {
+  background: unset;
+  border: unset;
+  text-align: left;
+  display: flex;
 }
