incorporating demo feedback, moving legend

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -88,6 +88,10 @@
 	}
 }
 
+.heatmap-legend-color {
+  height: 60px;
+}
+
 .explore-plot-tab-content {
 	border-right: 1px solid #ccc;
 	min-height: 70vh;
