--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -10,9 +10,10 @@
   // TODO: Feature-flag this for DE, refine before making GA
   // TODO (SCP-4321): Refine logic to enable fetching file from bucket, e.g. perhaps
   //   by incorporating forthcoming `hasDE` attribute on study model
-  window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
+  <% if current_user.feature_flag_for('differential_expression_frontend') %>
+    window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
+  <% end %>
 </script>
-
 
 <% if @study.has_analysis_outputs?('infercnv', 'ideogram.js') or @study.has_bam_files? %>
   <!--
