--- a/app/views/studies/_study_default_options_form.html.erb
+++ b/app/views/studies/_study_default_options_form.html.erb
@@ -1,18 +1,17 @@
-<% if @study.can_visualize_clusters? && @study.default_cluster.present? %>
-
-  <%= form_for(:study_default_options, url: update_default_options_study_path, html: {class: 'form', id: 'default-study-options-form', data: {remote: true}}) do |f| %>
-    <div class="well well-sm">
-      <% if @study.errors.any? %>
-        <div class="bs-callout bs-callout-danger">
-          <h4><%= pluralize(@study.errors.count, "error") %> prohibited this study from being saved:</h4>
-          <ul>
-            <% @study.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
-      <h4>Study Default View Options</h4>
+<%= form_for(:study_default_options, url: update_default_options_study_path, html: {class: 'form', id: 'default-study-options-form', data: {remote: true}}) do |f| %>
+  <div class="well well-sm">
+    <% if @study.errors.any? %>
+      <div class="bs-callout bs-callout-danger">
+        <h4><%= pluralize(@study.errors.count, "error") %> prohibited this study from being saved:</h4>
+        <ul>
+          <% @study.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <h4>Study Default View Options</h4>
+    <% if @study.can_visualize_clusters? && @study.default_cluster.present? %>
       <p class="help-block">Use this form to choose what the default expression axis label, cluster, annotation, color profile, and cluster point display properties are when someone views your study.</p>
       <div class="form-group row">
         <div class="col-sm-4">
@@ -42,20 +41,7 @@
           <%= f.number_field :cluster_point_alpha, value: @study.default_cluster_point_alpha, in: 0.0..1.0, step: 0.05, class: 'form-control' %>
         </div>
       </div>
-      <div class="form-group row">
-        <div class="col-sm-12">
-          <%= f.label :expression_label, 'Expression axis label' %>&nbsp;<span class="fas fa-question-circle" data-toggle="tooltip" data-placement="right" title='This is displayed as the axis label for box & scatter plots showing expression values.  This label is global to all expression values.'></span> <br />
-          <%= f.text_field :expression_label, value: @study.default_options[:expression_label], placeholder: @study.default_expression_label, class: 'form-control' %>
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-12 text-center">
-          <%= f.submit 'Update defaults', class: 'btn btn-success' %>
-        </div>
-      </div>
-    </div>
-
-    <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
+      <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
         $('#study_default_options_annotation').change(function() {
             var annotType = $(this).val().split('--')[1];
             if (annotType == 'group') {
@@ -80,7 +66,23 @@
             var cluster = $(this).val();
             $.get("<%= load_annotation_options_study_path %>?cluster=" + cluster)
         });
-    </script>
-  <% end %>
+      </script>
+    <% end %>
+    <% if @study.has_gene_lists? %>
+      <div class="form-group row">
+        <div class="col-sm-12">
+          <%= opts.label :precomputed_heatmap_label, 'Precomputed heatmap menu label' %>&nbsp;<span class="fas fa-question-circle" data-toggle="tooltip" data-placement="right" title='This is displayed above the list of uploaded precomputed heatmaps.'></span> <br />
+          <%= opts.text_field :precomputed_heatmap_label, value: @study.default_options[:precomputed_heatmap_label], placeholder: 'Precomputed heatmaps', class: 'form-control' %>
+        </div>
+      </div>
+    <% end %>
+    <% if @study.has_gene_lists? || @study.can_visualize_clusters? && @study.default_cluster.present? %>
+      <div class="form-group row">
+        <div class="col-sm-12 text-center">
+          <%= f.submit 'Update defaults', class: 'btn btn-success' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 
 <% end %>
