--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -124,7 +124,8 @@
   }
 }
 
-.table.table-scp-de {
+// Used in e.g. differential expression (DE) view
+.table.table-scp-compact {
   td {
     padding: 2px;
   }
