--- a/app/views/site/_study_visualize.html.erb
+++ b/app/views/site/_study_visualize.html.erb
@@ -1,17 +1,10 @@
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
   window.SCP.studyAccession = '<%= @study.accession %>';
   window.SCP.renderComponent('study-visualize', 'ExploreView', {studyAccession: window.SCP.studyAccession})
-  <% if @study.has_streamable_files? %>
+  <% if @study.has_streamable_files(current_user) %>
     if (typeof window.SCP.readOnlyToken === 'undefined') {
       window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
     }
-  <% end %>
-
-  // TODO: Feature-flag this for DE, refine before making GA
-  // TODO (SCP-4321): Refine logic to enable fetching file from bucket, e.g. perhaps
-  //   by incorporating forthcoming `hasDE` attribute on study model
-  <% if current_user && current_user.feature_flag_for('differential_expression_frontend') %>
-    window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
   <% end %>
 </script>
 
