Draft layout changes suggested at 2022-05-04 demo

--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -59,6 +59,11 @@
 
 
 .create-annotation-control {
+  display: inline;
+  float: right;
+  position: relative;
+  top: -80px;
+
 	.panel-collapse.in {
 		border: 1px solid #bbb;
 		border-radius: 5px;
