--- a/app/javascript/styles/_explore.scss
+++ b/app/javascript/styles/_explore.scss
@@ -62,6 +62,7 @@
   float: right;
   position: relative;
   top: -80px;
+  margin-bottom: -20px;
 
 	.panel-collapse.in {
 		border: 1px solid #bbb;
