--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -31,6 +31,9 @@
       <br/>
       <h5>Management pages</h5>
       <ul class="list-style-none">
+        <li>
+          <%= scp_link_to "Edit name & description", edit_study_path(@study), class: "#{@study.url_safe_name}-edit" %>
+        </li>
         <li role="presentation">
           <%= scp_link_to "Upload/Edit data", initialize_study_path(@study), class: "#{@study.url_safe_name}-upload" %>
         </li>
