--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -126,6 +126,14 @@
 
 // Used in e.g. differential expression (DE) view
 .table.table-scp-compact {
+  margin-bottom: 10px;
+  width: 105%;
+  max-width: inherit;
+
+  tr {
+    font-size: 13px;
+  }
+
   td {
     padding: 2px;
     vertical-align: baseline;
