--- a/app/javascript/styles/_forms.scss
+++ b/app/javascript/styles/_forms.scss
@@ -127,11 +127,22 @@
 // Used in e.g. differential expression (DE) view
 .table.table-scp-compact {
   margin-bottom: 10px;
-  width: 105%;
+  width: 115%;
   max-width: inherit;
+  position: relative;
+  left: -15px;
+
+  input {
+    margin-left: 2px;
+    margin-right: 8px;
+  }
 
   tr {
     font-size: 13px;
+  }
+
+  th:last-child {
+    padding-right: 2;
   }
 
   td {
