Add glossary for DE, refine timeSinceLastSelection

--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -856,3 +856,7 @@ figcaption.ck-editor__editable {
 .underline {
   text-decoration: underline;
 }
+
+.glossary {
+  border-bottom: 1px #555 dashed;
+}
