--- a/app/javascript/styles/_keywordSearch.scss
+++ b/app/javascript/styles/_keywordSearch.scss
@@ -23,6 +23,11 @@
     height: 38px;
   }
 
+  .gene-keyword-search-input.disabled > div:first-of-type {
+    background-color: #eee;
+    border-color: #ccc;
+  }
+
   .input.form-control {
     line-height: 100%;
     padding: 0 30px 0 16px;
