--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -21,7 +21,7 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', async function(
 
     // render fields & process entries based on file type
     if (fileType === 'Cluster') {
-        extraInfo.html("<%= j(render partial: 'cluster_axis_fields', locals: {f: f.dup}) %>");
+        extraInfo.html("<%= j(render partial: 'cluster_axis_fields', locals: {study_file: study_file, f: f.dup}) %>");
         nameField.attr('readonly', false);
     } else if (fileType === 'Metadata') {
         extraInfo.html("<%= j(render partial: 'metadata_file_fields', locals: {f: f.dup}) %>");
