Add social media links to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -196,6 +196,12 @@
         <%= link_to "<i class='fas fa-chevron-circle-left fa-fw'></i> Return to Single Cell Portal".html_safe, site_path %>
       <% end %>
     </div>
+    <div class="footer-social-media-icons-block pull-right ">
+    <%= link_to "<i class='fab fa-youtube'></i>".html_safe, "https://www.youtube.com/channel/UCp_UGD74MW8up1YkWZrWkKw", target: :_blank  %>
+    &nbsp;
+    <%= link_to "<i class='fab fa-twitter-square'></i>".html_safe, "https://twitter.com/SingleCellBroad", target: :_blank  %>
+    &nbsp;
+  </div>
     <div class="clearfix"></div>
 
 </div>
