--- a/app/javascript/styles/_brand.scss
+++ b/app/javascript/styles/_brand.scss
@@ -126,6 +126,14 @@
   display: inline-block;
 }
 
+.footer-social-media-icons-block {
+  color: white;
+  font-size: 30px;
+  height: 54px;
+  padding: 5px 30px 0 15px;
+  display: inline-block;
+}
+
 .study-panel, .study-genes-panel {
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 3px 2px 0 rgba(0,0,0,0.12);
   .panel-heading {
