--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -197,9 +197,9 @@
       <% end %>
     </div>
     <div class="footer-social-media-icons-block pull-right ">
-    <%= link_to "<i class='fab fa-youtube'></i>".html_safe, "https://www.youtube.com/channel/UCp_UGD74MW8up1YkWZrWkKw", target: :_blank, id: 'youtube-link'%>
+    <%= link_to "<i class='fab fa-youtube'></i>".html_safe, "https://www.youtube.com/channel/UCp_UGD74MW8up1YkWZrWkKw", target: :_blank, 'data-analytics-name' => 'youtube-link' %>
     &nbsp;
-    <%= link_to "<i class='fab fa-twitter-square', data-analytics-name='twitter-link' ></i>".html_safe, "https://twitter.com/SingleCellBroad", target: :_blank, id: 'twitter-link'  %>
+    <%= link_to "<i class='fab fa-twitter-square', data-analytics-name='twitter-link' ></i>".html_safe, "https://twitter.com/SingleCellBroad", target: :_blank, 'data-analytics-name' => 'twitter-link'  %>
     &nbsp;
   </div>
     <div class="clearfix"></div>
