--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -15,7 +15,7 @@
             <h2 class="text-center">Bulk Download</h2>
           </div>
           <div class="modal-body">
-            <% if @study.has_bucket_access?(current_user) %>
+            <% if !@study.has_bucket_access?(current_user) %>
             <p class="lead">To download all files using <code>gsutil</code>, run the following command:</p>
             <pre>gsutil -m cp -r gs://<%= @study.bucket_id %> [target path]</pre>
               <% if @directories.any? %>
@@ -71,7 +71,13 @@
                   </thead>
                 </table>
               <% end %>
-
+             <br/><br/><br/>
+             <p class="detail">
+              <b>Troubleshooting:</b> If the above command results in a curl error relating to certificates (common in hosted machines),
+         this may be caused by your machine not having a trust chain that includes the certificate from https://singlecell.broadinstitute.org.
+        <br/>You can solve the problem either by installing that certifcate onto the machine, or adding the "-k" option to the curl command, which skips certificate
+        validation.  e.g. `curl -k "https://singlecell...."`
+              </p>
             <% else %>
               <%# The user is trying to download a public study that is currently embargoed. %>
               <p class="lead">No downloads are available to you for this study yet</p>
