--- a/app/javascript/styles/_uploadWizard.scss
+++ b/app/javascript/styles/_uploadWizard.scss
@@ -85,7 +85,7 @@
     font-size: 0.8em;
   }
 
-  span.success, span.warning {
+  span.success, span.warning, span.info {
     color: #fff;
     padding: 0.1em 0.5em;
     border-radius: 5px;
@@ -97,6 +97,25 @@
     &.warning {
       background: $warning-icon-color;
     }
+    &.info {
+      background: #fff
+    }
+  }
+}
+
+.viz-info {
+  margin-bottom: 10px;
+  svg {
+    font-size: 0.8em;
+  }
+
+  span.info {
+    color: #fff;
+    padding: 0.1em 0.5em;
+    border-radius: 5px;
+    margin: 0.1em 0.25em 0.1em 15px;
+    display: inline-block;
+    background: rgb(56, 83, 142)
   }
 }
 
