--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -90,7 +90,7 @@
     enableURLDetection: true
   };
 </script>
-<script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>" src="//fast.appcues.com/119641.js"></script>
+<script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>" src="https://fast.appcues.com/119641.js"></script>
 
 </head>
 <body <%= @selected_branding_group.present? ? "data-branding-id=#{@selected_branding_group.name_as_id}" : nil %>>
