Baseline page titles

--- a/app/views/site/_study_title_bar.html.erb
+++ b/app/views/site/_study_title_bar.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:html_title) { "#{@study.name} - Single Cell Portal" } %>
+
 <div class="row">
   <div class="col-md-12">
     <h1 class="study-lead">Study: <%= @study.name %> <span class="badge" id="cell-count"> <%= @study.cell_count %> cells</span></h1>
