--- a/app/views/branding_groups/index.html.erb
+++ b/app/views/branding_groups/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:html_title) { 'Collections - Single Cell Portal' } %>
+
 <h1>Collections</h1>
 <div class="row">
   <div class="col-md-12">
