--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Single Cell Portal</title>
-  <%= favicon_link_tag 'scp_favicon.ico' %>
+<title>
+  <%= content_for?(:html_title) ? yield(:html_title) : "Single Cell Portal" %>
+</title>  
+<%= favicon_link_tag 'scp_favicon.ico' %>
   <%= csrf_meta_tags %>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -94,6 +96,7 @@
 
 </head>
 <body <%= @selected_branding_group.present? ? "data-branding-id=#{@selected_branding_group.name_as_id}" : nil %>>
+# <h1><%= yield(:title) %></h1>
 
   <%#
     TODO: In SCP-2121, move these includes back into HEAD element now that
