Study names for public, accession for private

--- a/app/views/site/_study_title_bar.html.erb
+++ b/app/views/site/_study_title_bar.html.erb
@@ -1,4 +1,9 @@
-<% content_for(:html_title) { "#{@study.accession} - Single Cell Portal" } %>
+
+<% if @study.public? %>
+  <% content_for(:html_title) { "#{@study.name } - Single Cell Portal" } %>
+<% else %>
+  <% content_for(:html_title) { "#{@study.accession} - Single Cell Portal" } %>
+<% end %>
 
 <div class="row">
   <div class="col-md-12">
