Collections title updates

--- a/app/views/branding_groups/index.html.erb
+++ b/app/views/branding_groups/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:html_title) { 'Collections - Single Cell Portal' } %>
+<% content_for(:html_title) { 'My collections - Single Cell Portal' } %>
 
 <h1>Collections</h1>
 <div class="row">
